# omero-marshal

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish_pypi.yml  tox.yml
.travis/: python2  python3
omero_marshal/: __init__.py
omero_marshal/decode/: __init__.py
omero_marshal/decode/decoders/: acquisitionmode.py  affinetransform.py  annotation.py  boolean_annotation.py  channel.py  checksum_algorithm.py  comment_annotation.py  contrastmethod.py  dataset.py  details.py  dimensionorder.py  double_annotation.py  ellipse.py  enum.py  event.py  eventtype.py  experimenter.py  experimentergroup.py  externalinfo.py  file_annotation.py  format.py  illumination.py  image.py  label.py  line.py  long_annotation.py  map_annotation.py  mask.py  original_file.py  permissions.py  photometricinterpretation.py  pixels.py  pixelstype.py  plate.py  plateacquisition.py  point.py  polygon.py  polyline.py  project.py  rect.py  (+12 more)
omero_marshal/encode/: __init__.py
omero_marshal/legacy/: AffineTransformI.py  affinetransform.py
tests/unit/: conftest.py  test_affinetransform_decoders.py  test_affinetransform_encoders.py  test_base_decoder.py  test_base_encoder.py  test_container_decoders.py  test_container_encoders.py  test_image_pixels_decoder.py  test_image_pixels_encoder.py  test_legacy_affinetranform.py  test_register_decoder.py  test_register_encoder.py  test_schema_version.py  test_shape_decoders.py  test_shape_encoders.py  test_transform_decoders.py
(+56 files in other folders)
