[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools.dynamic]
version = {attr = "ome_marhsal.__version__"}

[project]
name = "ome-marshal"
readme = "README.rst"
dynamic = ["version"]
description="OMERO Marshal"

requires-python = ">3.8"

dependencies = [
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v2 ',
    'or later (GPLv2+)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

authors = [
    {name = "The Open Microscopy Team"},
    {name = "Glencoe Software, Inc."},
]

[project.optional-dependencies]
tests = [
    "PyLD>=0.6.8",
    "pytest>=2.5.2,<3.3.0",
    "flake8>=2.1.0",
]

[project.urls]
Repository = "https://github.com/ome/omero-marshal"
Changelog = "https://github.com/ome/omero-marshal/blob/master/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
